Fix dereference bug, add dump option

--- a/conf/meiru.conf.sample
+++ b/conf/meiru.conf.sample
@@ -1,6 +1,6 @@
 bind localhost
 
 default:
-	box /mail/$user
+	box /mail/$domain/$user
 
-@include users.conf.sample
+@include localhost.conf.sample
